Fix bug that sidebars are not hidden on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -343,8 +343,6 @@ li {
     }
 
     .sidebar {
-        position: static;
-        height: auto;
-        width: 100%;
+        display: none
     }
 }
